# q4-capstone-backend

./: pyproject.toml
api/: serialize.py  views.py
capstone_backend/: settings.py  urls.py
creatures/: admin.py  models.py  views.py
creatures/migrations/: 0001_initial.py  0002_creature_conscious.py  0003_auto_20200415_1025.py  0003_auto_20200416_1332.py  0004_auto_20200415_1450.py
encounters/: admin.py  models.py  tests.py  utils.py
encounters/migrations/: 0001_initial.py  0002_encounters_created_on.py  0003_auto_20200421_0209.py
user/: admin.py  models.py
user/migrations/: 0001_initial.py
