[tool.poetry]
name = "q4-capstone-backend"
version = "0.1.0"
description = "Backend portion of final capstone project"
authors = ["Joseph Brown <joseph.d.brown94@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
djangorestframework = "^3.11.0"
django-cors-headers = "^3.2.1"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
